WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135128
[MSE] YouTube video decode error when variant-switching
https://bugs.webkit.org/show_bug.cgi?id=135128
Summary
[MSE] YouTube video decode error when variant-switching
Jer Noble
Reported
2014-07-21 13:06:18 PDT
[MSE] YouTube video decode error when variant-switching
Attachments
Patch
(17.96 KB, patch)
2014-07-21 13:16 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(17.57 KB, patch)
2014-07-21 13:31 PDT
,
Jer Noble
bfulgham
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-07-21 13:16:40 PDT
Created
attachment 235242
[details]
Patch
Jer Noble
Comment 2
2014-07-21 13:17:13 PDT
<
rdar://problem/17740181
>
Jer Noble
Comment 3
2014-07-21 13:31:07 PDT
Created
attachment 235243
[details]
Patch
Brent Fulgham
Comment 4
2014-07-21 13:44:30 PDT
Comment on
attachment 235243
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=235243&action=review
r=me.
> Source/WebCore/Modules/mediasource/SampleMap.cpp:119 > + decodeOrder().m_samples.insert(DecodeOrderSampleMap::MapType::value_type(decodeKey, sample));
All this seems a bit verbose, but certainly is fine.
Jer Noble
Comment 5
2014-07-21 13:47:24 PDT
Committed
r171316
: <
http://trac.webkit.org/changeset/171316
>
Jer Noble
Comment 6
2014-12-16 13:26:00 PST
<
rdar://problem/19268991
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug